# PboExplorer

./: .gitignore  .gitmodules  ClassFactory.hpp  ClassFactory.ixx  ClipboardFormatHandler.cpp  ClipboardFormatHandler.h  ClipboardFormatHandler.hpp  ClipboardFormatHandler.ixx  ComRef.hpp  ContextMenu.cpp  ContextMenu.hpp  ContextMenu.ixx  DebugLogger.cpp  DebugLogger.hpp  FileWatcher.cpp  FileWatcher.hpp  FileWatcher.ixx  GUIDLookup.ixx  GlobalCache.cpp  GlobalCache.hpp  PaaThumbnailHandler.ixx  PboContextMenu.cpp  PboContextMenu.hpp  PboDataObject.cpp  PboDataObject.hpp  PboExplorer.def  PboExplorer.sln  PboExplorer.sln.DotSettings  PboExplorer.vcxproj  PboExplorer.vcxproj.filters  PboFileDirectory.cpp  PboFileDirectory.hpp  PboFileStream.cpp  PboFileStream.hpp  PboFolder.cpp  PboFolder.hpp  PboFolderContextMenu.cpp  PboFolderContextMenu.hpp  PboLib.ixx  PboPatcher.cpp  (+28 more)
lib/ArmaPboLib/: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/ArmaPboLib/src/: pbo.cpp  pbo.hpp
src/: ClassFactory.ixx  ContextMenu.ixx  DebugLogger.hpp  FileWatcher.cpp  GUIDLookup.ixx  MipMapTool.ixx  PaaThumbnailHandler.ixx  PboContextMenu.cpp  PboDataObject.cpp  PboDataObject.hpp  PboExplorer.vcxproj.filters  PboFileDirectory.cpp  PboFileDirectory.hpp  PboFileStream.hpp  PboFolder.cpp  PboFolderContextMenu.hpp  PboPatcher.ixx  PboPidl.ixx  ProgressDialogOperation.ixx  PropertyKeyLookup.ixx  Resource.rc  ShellExt.cpp  ShellExt.hpp  TempDiskFile.cpp  TempDiskFile.ixx  UpdateHelperExe.cpp  Updater.ixx  dllmain.cpp  resource.h
util/: ComRef.ixx  DebugLogger.ixx  Encoding.ixx  FileUtil.ixx  (+7 more)
(+11 files in other folders)
